[package]
name = "geostationary"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
bevy = { version = "0.12", features = [] }
bevy_quinnet = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] }  

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
