[package]
name = "geostationary"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
  "modules/network",
  "modules/ui",
]

[dependencies]
bevy = { version = "0.14", features = ["default_font"] }
bevy_math = { version = "0.14" }

network = { path = "modules/network" }
ui      = { path = "modules/ui" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
